--- a/templates/reference.html
+++ b/templates/reference.html
@@ -21,4 +21,9 @@
     year = {2023},
 }
     </p>
+    <br>
+    <p>Download:</p>
+    <p><a href="http://leishidata.com/leishi/paper/KDD23.pdf"> Impact-Oriented Contextual Scholar Profiling using Self-Citation Graphs </a></p>
+    <p><a href="http://leishidata.com/leishi/paper/GF_final.pdf"> GeneticFlow: Exploring Scholar Impact with Interactive Visualization </a></p>
+    <p><a href="https://arxiv.org/pdf/2210.13148.pdf"> Transformers over Directed Acyclic Graphs </a></p>
 </html>
