--- a/templates/index.html
+++ b/templates/index.html
@@ -40,17 +40,17 @@
                 <ul class="address" style="padding-top: 0px;">
                     <li>
                         <ul class="address-text">
-                            <li style="width: 2%; float: left; height: 13px; font-size: 12.5px !important;"></li>
-                            <li style="width: 11%; color: #777; float: left; height: 13px; font-size: 12.5px !important;">remove survey papers</li>
-                            <li style="width: 11%; color: #777; float: left; height: 13px; font-size: 12.5px !important; margin-left: -1%;">remove isolated papers</li>
-                            <li style="width: 12%; color: #777; float: left; height: 13px; font-size: 12.5px !important; margin-left: 0%;">only show core papers</li>
-                            <li style="width: 12%; color: #777; float: left; height: 13px; font-size: 12.5px !important; margin-left: 0%;">only show extend citations</li>
-                            <li style="width: 9%; color: #777; float: left; height: 13px; font-size: 12.5px !important; margin-left: 0%;">node outline color</li>
-                            <li style="width: 9%; color: #777; float: left; height: 13px; font-size: 12.5px !important; margin-left: 1%;">node outline thickness</li>
-                            <li style="width: 9%; color: #777; float: left; height: 13px; font-size: 12.5px !important; margin-left: 1.8%;">node fill color</li>
-                            <li style="width: 9%; color: #777; float: left; height: 13px; font-size: 12.5px !important;">paper topic hierarchy</li>
-                            <li style="width: 9%; color: #777; float: left; height: 13px; font-size: 12.5px !important; margin-left: 1.7%;">node max width</li>
-                            <li style="width: 1%; float: right; height: 13px; font-size: 12.5px !important;"></li>
+                            <li style="width: 2%; float: left; height: 14px; font-size: 13px !important;"></li>
+                            <li style="width: 11%; color: #777; float: left; height: 14px; font-size: 13px !important;">remove survey papers</li>
+                            <li style="width: 11%; color: #777; float: left; height: 14px; font-size: 13px !important; margin-left: -1.5%;">remove isolated papers</li>
+                            <li style="width: 13%; color: #777; float: left; height: 14px; font-size: 13px !important; margin-left: 1%;">only show core papers</li>
+                            <li style="width: 13%; color: #777; float: left; height: 14px; font-size: 13px !important; margin-left: 0.5%;">only show extend citations</li>
+                            <li style="width: 9%; color: #777; float: left; height: 14px; font-size: 13px !important; margin-left: -0.5%;">node outline color</li>
+                            <li style="width: 9%; color: #777; float: left; height: 14px; font-size: 13px !important; margin-left: 1%;">node outline thickness</li>
+                            <li style="width: 9%; color: #777; float: left; height: 14px; font-size: 13px !important; margin-left: 1%;">node fill color</li>
+                            <li style="width: 9%; color: #777; float: left; height: 14px; font-size: 13px !important; margin-left: 0.5%;">paper topic hierarchy</li>
+                            <li style="width: 9%; color: #777; float: left; height: 14px; font-size: 13px !important; margin-left: 1%;">node max width</li>
+                            <li style="width: 1%; float: right; height: 14px; font-size: 13px !important;"></li>
                         </ul>
                     </li>
                     <li>
@@ -63,12 +63,12 @@
                                 </select>
                             </li>
                             <li style="width: 9%; float: left; color: #777; margin-top: 0.5%; margin-bottom: 0.5%;">
-                                <select id="mode" class="form-select" value="1" name="mode" style="display: inline-block; color:#333; width: 60%; padding-top: 0.2em; padding-bottom: 0.2em;">
+                                <select id="mode" class="form-select" name="mode" style="display: inline-block; color:#333; width: 60%; padding-top: 0.2em; padding-bottom: 0.2em;">
                                     <option value="0">Yes</option>
-                                    <option value="1">No</option>
+                                    <option value="1" selected>No</option>
                                 </select>
                             </li>
-                            <li style="width: 13%; float: left; color: #777;">
+                            <li style="width: 14%; float: left; color: #777;">
                                 <span style="display: inline-block; width: 15%; font-size:8px;">no filter</span>
                                 <input style="display: inline-block; width: 60%; " id="range-node" type="range" name="isKeyPaper" value="0.5" min="0" max="1" step="0.1">
                                 <span id="node-value" style="display: inline-block; width: 15%; color: #333; font-size:8px">≥0.5 prob.</span>
@@ -79,7 +79,7 @@
                                     })
                                 </script>
                             </li>
-                            <li style="width: 13%; float: left; color: #777;">
+                            <li style="width: 14%; float: left; color: #777;">
                                 <span style="display: inline-block; width: 15%; font-size:8px;">no filter</span>
                                 <input style="display: inline-block; width: 60%;" id="range-edge" type="range" name="extendsProb" value="0.4" min="0" max="1" step="0.1">
                                 <span id="edge-value" style="display: inline-block; width: 15%; color: #333; font-size:8px">≥0.4 prob.</span>
@@ -121,7 +121,7 @@
                                     $("#fill-color").change(fill_color_change);
                                 </script>
                             </li>
-                            <li style="width: 9%; float: left; color: #777; margin-top: 0.5%; margin-bottom: 0.5%; margin-left: 1.5%;">
+                            <li style="width: 8%; float: left; color: #777; margin-top: 0.5%; margin-bottom: 0.5%; margin-left: 1.5%;">
                                 <select id="field-level" class="form-select" name="fieldThreshold" style="display: inline-block; color:#333; width: 60%; padding-top: 0.2em; padding-bottom: 0.2em;">
                                     <option value="2" selected>2</option>
                                     <option value="1">1</option>
@@ -130,7 +130,7 @@
                                     $("#field-level").change(field_level_change);
                                 </script>
                             </li>
-                            <li style="width: 9%; float: left; color: #777; margin-top: 0.5%; margin-bottom: 0.5%; margin-left: 1.5%;">
+                            <li style="width: 8%; float: left; color: #777; margin-top: 0.5%; margin-bottom: 0.5%; margin-left: 1.5%;">
                                 <select id="node-width" class="form-select" name="nodeWidth" style="display: inline-block; color:#333; width: 60%; padding-top: 0.2em; padding-bottom: 0.2em;">
                                     <option value="0">None</option>
                                     <option value="5">5</option>
