--- a/templates/reference.html
+++ b/templates/reference.html
@@ -1,3 +1,8 @@
+<head>
+    <title>Reference</title>
+    <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=G-9FR7K2YVNR"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-9FR7K2YVNR'); </script>
+</head>
+
 <html>
     <p style="white-space: pre-wrap;">@inproceedings{luo2023impact,
     title={Impact-Oriented Contextual Scholar Profiling using Self-Citation Graphs},
