--- a/templates/front.html
+++ b/templates/front.html
@@ -17,7 +17,7 @@
 	<body class="text-center">
 		<form class="form-signin">
             <input type="hidden" name="csrfmiddlewaretoken" value="Yse6cgbnpqJr4Xjn1flWIVqE5knZ5Ty44Z0GtTvzdxFypbn46s9aILmj2eTgPCWJ">
-			<img class="mb-4" src="/src/image/logo-search.jpg" alt="" width="390" height="140.4">
+			<a href="/"><img class="mb-4" src="/src/image/logo-search.jpg" alt="" width="390" height="140.4"></a>
 			<br />
             <div style="display: inline;">
                 <!-- <a id="visualizationLink" class="btn btn-front" href="search/?field=visualization" style="background-color: #f8f9fa; border-color: #f8f9fa; color: #3c4043;">visualization</a> -->
@@ -32,13 +32,13 @@
 			</div>
 			<br />
 			<br />
-			<p class="mt-5 mb-3 text-muted">© 2023-2024</p>
-			<a href=" " target="_blank">京ICP备2022000473号-2</a>
 			<br />
 			<br />
-			<p style="white-space: pre-wrap; text-align: center;">Please send any enquiry/feedback to: <b>geneticflowcontact@gmail.com</b>,
-and see our <a href="reference">KDD/VIS 2023 paper</a> for more details.
+			<p class="mt-5 text-muted">@ {{ versionID }}<a href="/changelog" style="margin-left: 2em;">ChangeLog</a></p>
+			<p style="white-space: pre-wrap; text-align: center; margin-bottom: -3%;">Please send any enquiry/feedback to: <b>geneticflowcontact@gmail.com</b>,
+and see our <a href="reference">KDD/VIS/NeurIPS 2023 papers</a> for more details.
 			</p>
+			<p class="mt-5 text-muted">© 2023-2024<a href=" " target="_blank" style="margin-left: 2em;">京ICP备2022000473号-2</a></p>
 		</form>
 	</body>
 </html>
