--- a/templates/list.html
+++ b/templates/list.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+    <meta charset="UTF-8">
     <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=G-9FR7K2YVNR"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-9FR7K2YVNR'); </script>
     <title>List</title>
     <link rel="icon" href="/src/image/favicon.ico" type="image/x-icon"/>
@@ -19,11 +20,14 @@
         <div class="navigation" style="background-image: linear-gradient(to bottom, #054863, #0d3245); padding-bottom: 2%; padding-top: 2%;">
             <div class="logo" style="margin-left: 8%;">
                 <!--h1><span>G</span>eneticFlow</h1-->
-                <img src="/src/image/logo-index.jpg" width="324" height="72">
+                <a href="/"><img src="/src/image/logo-index.jpg" width="324" height="72"></a>
             </div>
             <div class="clearfix"></div>
         </div>
         <div class="banner-info" style="margin-left: 8%;">
+            <nav aria-label="Page navigation" style="margin-top: -0.5%; margin-bottom: -1%;">
+                <ul class="pagination" id="pagination"></ul>
+            </nav>
             <div style="float: left; width: 95%;">
                 <table class="table">
                     <thead>
@@ -52,14 +56,6 @@
         //         { "orderable": false, "targets": [4] } // 第一列不可排序
         //     ]
         // });
-        function table_show(scholarList, fieldType) {
-            $('table tbody').empty();
-            for (let i = 0; i < scholarList.length; i++) {
-                scholarList[i]["rank"] = i + 1;
-                var content = "<tr><td>" + scholarList[i]["rank"] + "</td><td>" + scholarList[i]["name"] + "</td><td>" + scholarList[i]["paperCount"] + "</td><td>" + scholarList[i]["citationCount"] + "</td><td>" + scholarList[i]["hIndex"] + "</td><td><a class=\"btn-sm btn-primary\" href=\"index?field=" + fieldType + "&id=" + scholarList[i]["authorRank"] + "\" style=\"font-size: 2px;\">Visualize</a></td></tr>";
-                $('table tbody').append(content);
-            }
-        }
         function compare(index, sortType) {
             return function(row1, row2) {
                 var aValue = row1[index];
@@ -75,43 +71,85 @@
                 }
             }
         }
+        function displayData(page) {
+            $('table tbody').empty();
+            const startIndex = (page - 1) * itemsPerPage;
+            const endIndex = startIndex + itemsPerPage;
+
+            for (let i = startIndex; i < endIndex && i < scholarList.length; i++) {
+                let scholar = scholarList[i];
+                var content = `
+                    <tr>
+                        <td>${i + 1}</td>
+                        <td>${scholar["name"]}</td>
+                        <td>${scholar["paperCount"]}</td>
+                        <td>${scholar["citationCount"]}</td>
+                        <td>${scholar["hIndex"]}</td>
+                        <td>
+                            <a class="btn-sm btn-primary" href="/index?field=${fieldType}&id=${scholar["authorID"]}" style="font-size: 12px; text-decoration: none;">
+                                Visualize
+                            </a>
+                        </td>
+                    </tr>`;
+                $('table tbody').append(content);
+            }
+        }
+
+        function displayPagination() {
+            const totalItems = scholarList.length;
+            const totalPages = Math.ceil(totalItems / itemsPerPage);
+            for (let i = 1; i <= totalPages; i++) {
+                const listItem = $('<li class="page-item"></li>');
+                const link = $('<a class="page-link" href="#">' + i + '</a>');
+                link.click(function (e) {
+                    e.preventDefault();
+                    displayData(i);
+                });
+                listItem.append(link);
+                $('#pagination').append(listItem);
+            }
+            displayData(1);
+        }
+
         $(function () {
-            var scholarList = {{ scholarList|safe }},
-                fieldType = "{{ field }}",
-                field, question_content;
+            itemsPerPage = 1000;    // 每页显示的数据数量
+            scholarList = {{ scholarList|safe }};
+            fieldType = "{{ fieldType }}";
+            var fieldlabel, questionContent;
+            
             if (fieldType == "visualization") {
-                field = "Visualization";
-                question_content = "The scholar metrics below are obtained from all the publications tagged as visualization papers in Microsoft Academic Graph (MAG) dataset, till 2020.5. All paper citation counts are native data from MAG.";
+                fieldlabel = "Visualization";
+                questionContent = "The scholar metrics below are obtained from all the publications tagged as visualization papers in Microsoft Academic Graph (MAG) dataset, till 2020.5. All paper citation counts are native data from MAG.";
             }
             else if (fieldType == "acl") {
-                field = "NLP";
-                question_content = "The scholar metrics below are obtained from all the paper publications in ACL Anthology Reference Corpus (ARC), till 2021.7. All paper citation counts are native data from ARC.";
+                fieldlabel = "NLP";
+                questionContent = "The scholar metrics below are obtained from all the paper publications in ACL Anthology Reference Corpus (ARC), till 2021.7. All paper citation counts are native data from Microsoft Academic Graph (MAG).";
             }
             var content = `
             <div class="question">
                 <i class="fa-solid fa-circle-question hover-text"></i>
-                <span class="question-tip" style="font-size: 2px;">
-                    ${question_content}
+                <span class="question-tip" style="font-size: 10px;">
+                    ${questionContent}
                 </span>
             </div>`;
-            $("#paper-count").text(field + " Paper Count ");
-            $("#citations").text(field + " Paper Citations ");
-            $("#h-index").text("h-index (" + field + ") ");
+            $("#paper-count").text(fieldlabel + " Paper Count ");
+            $("#citations").text(fieldlabel + " Paper Citations ");
+            $("#h-index").text("h-index (" + fieldlabel + ") ");
             $("#paper-count, #citations, #h-index").append(content);
-            table_show(scholarList, fieldType);
+            
+            scholarList.sort(compare("paperCount", "asc"));
+            displayPagination();
         });
         $('table').on('click', 'th', function () {
             var index = $(this).index();
             if (index != 0) {
-                const indexLabel = ["unamed", "name", "paperCount", "citationCount", "hIndex"];
-                var thClass = $(this).hasClass('asc') ? 'desc' : 'asc',
-                    scholarList = {{ scholarList|safe }},
-                    fieldType = "{{ field }}";
+                const indexLabel = ["rank", "name", "paperCount", "citationCount", "hIndex"];
+                var thClass = $(this).hasClass('asc') ? 'desc' : 'asc';
                 scholarList.sort(compare(indexLabel[index], thClass));
-
+                
                 $('table th').removeClass('asc desc');
                 $(this).addClass(thClass);
-                table_show(scholarList, fieldType);
+                displayData(1);
             }
         });
     </script>
