resolve conflicts from local environment

--- a/templates/front.html
+++ b/templates/front.html
@@ -32,10 +32,13 @@
 			</div>
 			<br />
 			<br />
-			<p class="mt-5 text-muted" style="margin-bottom:0.5%">© 2023-2024<a href=" " target="_blank" style="margin-left: 2em;">京ICP备2022000473号-2</a></p>
-			<p style="white-space: pre-wrap; text-align: center;">Please send any enquiry/feedback to: <b>geneticflowcontact@gmail.com</b>,
+			<br />
+			<br />
+			<p class="mt-5 text-muted">@ {{ versionID }}<a href="/changelog" style="margin-left: 2em;">ChangeLog</a></p>
+			<p style="white-space: pre-wrap; text-align: center; margin-bottom: -3%;">Please send any enquiry/feedback to: <b>geneticflowcontact@gmail.com</b>,
 and see our <a href="reference">KDD/VIS/NeurIPS 2023 papers</a> for more details.
 			</p>
+			<p class="mt-5 text-muted">© 2023-2024<a href=" " target="_blank" style="margin-left: 2em;">京ICP备2022000473号-2</a></p>
 		</form>
 	</body>
 </html>
