--- a/templates/index.html
+++ b/templates/index.html
@@ -78,7 +78,7 @@
                                 <span style="display: inline-block; width: 15%; font-size:8px;">no filter</span>
                                 <div id="range-edge" style="display: inline-block; width: 60%;"></div>
                                 <!-- <input style="display: inline-block; width: 60%;" id="range-edge" class="graph-slider" type="range" name="extendsProb" value="0.4" min="0" max="1" step="0.1"> -->
-                                <span id="edge-value" style="display: inline-block; width: 15%; color: #333; font-size:8px">≥0.4 prob.</span>
+                                <span id="edge-value" style="display: inline-block; width: 15%; color: #333; font-size:8px">≥0.5 prob.</span>
                             </li>
                             <li style="width: 10%; float: left; color: #777; margin-top: 0.5%; margin-bottom: 0.5%; margin-left: 0.7%;">
                                 <select id="outline-color" class="form-select" name="outlineColor" style="display: inline-block; color:#333; width: 60%; padding-top: 0.2em; padding-bottom: 0.2em;">
@@ -412,7 +412,10 @@
             }
             
             var filename = `/src/json/${fieldType}/${authorID}`;
-            if (fieldType == "acl") filename += '_1_0.5_0.4_10_1.json';
+            if (fieldType == "acl") {
+                $("#edge-value").text("≥0.4 prob.");
+                filename += '_1_0.5_0.4_10_1.json';
+            }
             else if (fieldType == "visualization")  filename += '_1_0.5_0.5_10_1.json';
 
             d3.json(filename).then( data => {
@@ -494,7 +497,6 @@
             paramData.field = "{{ fieldType }}";
             paramData.isKeyPaper = nodeSlider.noUiSlider.get();
             paramData.extendsProb = edgeSlider.noUiSlider.get();
-            console.log(paramData.isKeyPaper, paramData.extendsProb);
 
             $.ajax({
                 headers: {"X-CSRFToken": getCookie("csrftoken")},
